@startuml
!theme amiga
entity User {
    * id VARCHAR(100) <<PK>>
    --
    * name VARCHAR(100)
}

entity Notifications {
    * id INT AUTO INCREMENT <<PK>>
    --
    * title VARCHAR(255)
    * detail TEXT
    * created_at TIMESTAMP
    * is_read BOOLEAN
    --
    user_id VARCHAR(100) <<FK>>
    category_id VARCHAR(100) <<FK>>
}

entity Category {
    * id VARCHAR(100) <<PK>>
    --
    * name VARCHAR(100)
}

entity NotificationsRead {
    * id INT AUTO INCREMENT <<PK>>
    --
    * is_read BOOLEAN
    --
    * notification_id INT <<FK>>
    * user_id VARCHAR(100) <<FK>>
}

User ||--o{ Notifications
Category ||-o{ Notifications
Notifications ||-o{ NotificationsRead
User ||--o{ NotificationsRead
@enduml